[package]
name = "proquint"
version = "0.1.0"
authors = ["Christian Blades <christian.blades+github@gmail.com>"]
repository = "https://github.com/christian-blades-cb/proquint-rs"
documentation = "https://docs.rs/proquint"
keywords = ["proquint", "usability", "humanize"]
categories = ["encoding", "value-formatting"]
license = "BSD-3-Clause"
description = "Proquints are readable, pronouncable representations of identifiers. For humans."
readme = "README.md"

[badges]
travis-ci = { repository = "christian-blades-cb/proquint-rs", branch = "master" }

[dependencies]

[dev-dependencies]
quickcheck = "0.6.1"
